<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textGray"
    android:orientation="vertical"
    tools:context="com.h.chad.popquiz.MainActivity">
    <!-- Only Child of Scrollview -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <!-- Question 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/questionNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question 1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/questionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:minLines="3"
                    android:text="@string/question1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/spaceneedle" />
            </LinearLayout>

            <!-- Answer 1 -->
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">
                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="305'" />
                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="405'" />
                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="505'" />
                <RadioButton
                    android:id="@+id/answer1"
                    style="@style/radioButtonStyle"
                    android:text="605'" />
            </RadioGroup>
        </LinearLayout>

        <!-- Question 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp">

            <TextView
                style="@style/questionNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textGray"
                android:text="Question 2" />

            <LinearLayout
                style="@style/linearLayoutMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/questionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:minLines="3"
                    android:text="@string/question2"></TextView>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/mount_rainier_over_tacoma" />
            </LinearLayout>

            <!-- Answer 2 -->
            <EditText
                android:id="@+id/rainier"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="mountain name"
                android:inputType="text" />
        </LinearLayout>

        <!-- Question 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/questionNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question 3" />

            <LinearLayout
                style="@style/linearLayoutMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/questionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3" />
            </LinearLayout>

            <!-- Answer 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/answer300"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Iron Maiden" />

                    <CheckBox
                        android:id="@+id/answer301"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Alice in Chains" />

                    <CheckBox
                        android:id="@+id/answer302"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Metallica" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/answer303"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Queensrych" />

                    <CheckBox
                        android:id="@+id/answer304"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Pearl Jam" />

                    <CheckBox
                        android:id="@+id/answer305"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Bee Gees" />
                </LinearLayout>
            </LinearLayout>

            <!-- Question 4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionNumberStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Question 4" />

                <LinearLayout
                    style="@style/linearLayoutMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/questionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question4" />
                </LinearLayout>
            </LinearLayout>

            <!-- Answer 4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/answer400"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1995" />

                    <CheckBox
                        android:id="@+id/answer401"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1909" />

                    <CheckBox
                        android:id="@+id/answer402"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1936" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/answer403"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1962" />

                    <CheckBox
                        android:id="@+id/answer404"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1920" />

                    <CheckBox
                        android:id="@+id/answer405"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1891" />
                </LinearLayout>
            </LinearLayout>

            <!-- Question 5 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionNumberStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Question 5" />

                <LinearLayout
                    style="@style/linearLayoutMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/questionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question5" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vanilla Sky" />
                    <RadioButton
                        android:id="@+id/answer5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Singles" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Almost Famous" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jerry Maguire" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <!--   Submit Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/scoreQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:text="Submit" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
